--- a/CSS/inicio.css
+++ b/CSS/inicio.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 99%;
     height: 99%;
-    overflow:unset;
+    overflow:offset;
 
     background: #C98B98;
     mix-blend-mode: normal;
@@ -18,17 +18,17 @@
 
 .palo{
     position: absolute;
-    width: 75%;
-    height: 0px;
-    top: 10%;
-    left: 150px;
+    width: 99%;
+    bottom:99%;
     background-color: #FFFFFF;
-    border: 5px solid #FFFFFF;
+    border: 3px solid #FFFFFF;
     transform: rotate(90deg);
 }
 
 
 .btn{
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
     position: absolute;
     width: 280px;
     height: 80px;
@@ -45,15 +45,15 @@
 }
 
 .btn.izq{
-    left: calc(50% - 78px/2 - 462px);
-    top: calc(50% - 280px/2);
+    left: calc(50% - 78px/2 - 450px);
+    top: calc(50% - 150px/2);
 
     background: rgba(255, 255, 255, 0.2);
 }
 
 .btn.der{
-    left: calc(50% - 80px/2 + 462px);
-    top: calc(50% - 280px/2);
+    left: calc(50% - 80px/2 + 325px);
+    top: calc(50% - 150px/2);
 
     background: rgba(255, 255, 255, 0.2);
 }
