--- a/CSS/catalogo.css
+++ b/CSS/catalogo.css
@@ -1,24 +1,50 @@
-.padre{
+body {
+    padding: 0px;
+    margin: 0px;
+    background-color: #f2f2f2;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.padre {
     padding: 10px;
     margin: 50px;
 }
-.imagen{
-    width: 225px; 
+
+.imagen {
+    width: 225px;
     height: 300px;
     border-radius: 5px;
 }
 
-.rect{
+.rect {
     background-color: brown;
     width: 225px;
     height: 300px;
     border-radius: 5px;
 }
 
-.c1{ left: 89px; }
-.c2{ left: 388px; }
-.c3{ left: 687px; }
-.c4{ left: 986px; }
-.c5{ left: 1285px; }
+.c1 {
+    left: 89px;
+}
 
-.f1{ top: 125px; }
+.c2 {
+    left: 388px;
+}
+
+.c3 {
+    left: 687px;
+}
+
+.c4 {
+    left: 986px;
+}
+
+.c5 {
+    left: 1285px;
+}
+
+.f1 {
+    top: 125px;
+}
