--- a/CSS/cesta/cesta.css
+++ b/CSS/cesta/cesta.css
@@ -60,7 +60,7 @@ h1 {
     height: 300px;
 }
 
-li {
+.producto {
     list-style: none;
     background-color: #bbb;
     width: 100px;
@@ -75,4 +75,8 @@ li {
 
 .der {
     float: right;
+}
+
+.centro {
+    margin-left: calc(50% - 100px);
 }
