--- a/CSS/cesta/op.css
+++ b/CSS/cesta/op.css
@@ -91,3 +91,44 @@ ul {
     margin: 20px 20px 0 20px;
     text-align: center;
 }
+
+
+/* Fechas */
+
+.fecha {
+    background-color: #555;
+    width: 250px;
+    height: 450px;
+    margin-top: 40px;
+}
+
+.f-izq {
+    float: left;
+    position: absolute;
+    margin-left: 20px;
+}
+
+.f-der {
+    float: right;
+    position: ab;
+    margin-right: 20px;
+}
+
+
+/* Métodos de pago */
+
+.pago {
+    list-style: none;
+    text-align: center;
+    background-color: #bbb;
+    width: 150px;
+    height: 20px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 10px;
+    transition: 300ms;
+}
+
+.pago:hover {
+    background-color: #999;
+}
