--- a/CSS/inicio.css
+++ b/CSS/inicio.css
@@ -1,14 +1,13 @@
-.body{
+.body {
     position: relative;
     width: 99%;
     height: 99%;
-    overflow:offset;
-
+    overflow: offset;
     background: #C98B98;
     mix-blend-mode: normal;
 }
 
-.bg{
+.bg {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -16,17 +15,16 @@
     top: 0px;
 }
 
-.palo{
+.palo {
     position: absolute;
     width: 99%;
-    bottom:99%;
+    bottom: 99%;
     background-color: #FFFFFF;
     border: 3px solid #FFFFFF;
     transform: rotate(90deg);
 }
 
-
-.btn{
+.btn {
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
     position: absolute;
@@ -40,28 +38,37 @@
     color: rgb(240, 240, 240);
     border: 0px;
     transform: matrix(0, 1, -1, 0, 0, 0);
-
     transition: ease-in 50ms;
 }
 
-.btn.izq{
+.btn.izq {
     left: calc(50% - 78px/2 - 450px);
     top: calc(50% - 150px/2);
-
     background: rgba(255, 255, 255, 0.2);
 }
 
-.btn.der{
+.btn.der {
     left: calc(50% - 80px/2 + 325px);
     top: calc(50% - 150px/2);
-
     background: rgba(255, 255, 255, 0.2);
 }
 
-.btn:hover{
+.btn:hover {
     width: 300px;
     height: 100px;
     border: 20px, solid, #BA8D96;
     color: #BA8D96;
     background: #FFFFFF;
+}
+
+.izq {
+    float: left;
+}
+
+.der {
+    float: right;
+}
+
+.cent {
+    text-align: center;
 }
