--- a/CSS/header_footer/footer.css
+++ b/CSS/header_footer/footer.css
@@ -1,6 +1,6 @@
 footer {
     background-color: #b6b6b6;
-    position: unset;
+    position: absolute;
     width: 100%;
     height: 65px;
     bottom: 0;
