--- a/CSS/header_footer/header.css
+++ b/CSS/header_footer/header.css
@@ -3,7 +3,10 @@
 .c-fondo {
     background-color: #b6b6b6;
     width: 100%;
-    height: 30px;
+    height: 50px;
+    
+    text-align: center;
+    justify-self: center;
 }
 
 .sep {
@@ -17,19 +20,25 @@
     height: 75%;
 }
 
+p{
+    font-size: 25px;
+    margin-top: 10px;
+}
 
 /* Nombre de la pagina */
 
 .nombre {
+    position: relative;
     width: 200px;
-    height: 23px;
-    padding-top: 7px;
-    text-align: center;
-    justify-self: center;
+    height: 100%;
     background-color: #D0D0D0;
     float: left;
 }
 
+img.foto{
+    width: 60px;
+    height: 60px;
+}
 
 /* Parte del carrito */
 
@@ -40,6 +49,7 @@
     right: 5px;
     float: right;
     transition: 200ms;
+    cursor: pointer;
 }
 
 .foto-c {
@@ -47,6 +57,7 @@
     margin-right: 40px;
     margin-top: 3px;
     float: right;
+    cursor: pointer;
 }
 
 
@@ -58,11 +69,18 @@
     margin: 7px 0 0 0px;
     right: 5px;
     float: right;
+    cursor: pointer;
 }
 
-.foto-u {
+#foto-u {
     position: relative;
     margin-top: 3px;
     margin-right: 20px;
     float: right;
+    cursor: pointer;
+}
+
+a, a:visited{
+    font-style: unset;
+    color: #222;
 }
