--- a/CSS/cesta/cesta.css
+++ b/CSS/cesta/cesta.css
@@ -7,7 +7,7 @@ h1 {
 
 .cuadro {
     background: #ccc;
-    position: absolute;
+    position: relative;
     padding: 10px;
     text-align: center;
     margin: 10px;
@@ -15,7 +15,7 @@ h1 {
     border: 2px solid #222;
     width: 200px;
     height: 250px;
-    top: 150px;
+    top: 50px;
     transition: 500ms;
 }
 
@@ -26,27 +26,19 @@ h1 {
 
 .cuadro:hover {
     background-color: #a9a9a9;
-    width: 220px;
-    height: 270px;
 }
 
 
 /*Situación de cada cuadro por separado*/
-
-.c1 {
-    left: 250px;
+.full{
+    width: 100%;
 }
 
-.c2 {
-    left: 500px;
-}
-
-.c3 {
-    left: 750px;
-}
-
-.c4 {
-    left: 1000px;
+.flex{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -54,19 +46,26 @@ h1 {
 
 .carrito {
     position: absolute;
-    top: calc(100% - 300px);
+    top: calc(100% - 250px);
     background-color: #a9a9a9;
     width: 100%;
-    height: 300px;
+    height: 250px;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .producto {
     list-style: none;
     background-color: #bbb;
     width: 100px;
-    height: 225px;
+    height: 160px;
     padding: 10px;
     margin: 20px;
+}
+
+#articulos{
+    margin: 0;
+    padding: 0;
 }
 
 .izq {
@@ -77,6 +76,32 @@ h1 {
     float: right;
 }
 
-.centro {
-    margin-left: calc(50% - 100px);
+input[type="submit"]{
+    border-radius: 5px;
+    font-size: large;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #eee;
+    border: 1px solid #555;
+    color: #555;
+}
+
+input[type="submit"]:hover{
+    background-color: #555;
+    color: #eee;
+}
+
+.cent{
+    margin-top: 10px;
+    text-align: center;
+}
+
+.costo{
+    background-color: #555;
+    padding: 10px;
+    color: #eee;
+    font-size: larger;
+    font-weight: bold;
+    width: 10%;
+    height: 100%;
+    text-align: center;
 }
