--- a/CSS/perfil/venta.css
+++ b/CSS/perfil/venta.css
@@ -5,29 +5,81 @@
 }
 
 .l-mar{
-    margin-left: 30px;
+    margin-left: 100px;
+}
+
+label{
+    font-size: large;
 }
 
 
 /* Mapa */
 .mapa{
     background-color: grey; 
-    width: 35%; 
+    width: 100%; 
     height: 100%;
     min-width: 300px;
     min-height: 200px;
 }
 
 textarea{
-    width: 35%;
+    width: 100%;
+    height: 100%;
 }
 
 .full{
     width: 100%;
+    margin-top: 20px;
 }
 
 .full::after{
     content: "";
     display: block;
     clear: both;
+}
+
+.der{
+    left: calc(100%-300px);
+}
+
+.over{
+    overflow-x: scroll;
+    max-width: 450px;
+}
+
+.image{
+    width: 100px;
+    height: 100px;
+    margin:10px;
+}
+
+/* Lista de ciudades */
+
+.h50{
+    height: 250px;
+}
+
+
+#listaUbis{
+    margin-left: 20px;
+    background-color: #555;
+    border-radius: 5px;
+    overflow-y: scroll;
+    height: 100%;
+    width: 750px;
+}
+
+.ubi{
+    color: #eee;
+}
+
+.ubi:hover{
+    color: #eee;
+    background-color: #555;
+    text-align: center;
+}
+
+label[for="ubisTotal"]{
+    margin-top: 25px;
+    color: #eee;
 }
