--- a/CSS/logIn_SignIn.css
+++ b/CSS/logIn_SignIn.css
@@ -34,21 +34,15 @@ h3 {
     border-radius: 5px;
 }
 
-input.txt {
-    background-color: #C4C4C4;
-    border-radius: 5px;
-    border: 0;
-    padding: 8px;
-    margin: 20px;
-}
-
 .txtsin {
     width: calc(100% - 60px);
+    margin-bottom: 10px;
 }
 
-::placeholder {
-    color: #555;
+::placeholder{
+    color: #222
 }
+
 
 .h50 {
     height: 50%;
@@ -66,6 +60,7 @@ input.txt {
     padding: 5px;
     transition: 100ms;
     font-size: medium;
+    margin-bottom: 35px;
 }
 
 #btnEnter:hover {
