--- a/CSS/catalogo.css
+++ b/CSS/catalogo.css
@@ -8,35 +8,66 @@ body {
 }
 
 .padre {
-    padding: 10px;
-    margin: 50px;
-}
-
-.pad {
-    padding: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 25px 0;
 }
 
 .imagen {
+    position: relative;
     width: 225px;
     height: 300px;
-    border-radius: 5px;
+    margin: 25px 10px 0 0;
     transition: 200ms;
+    cursor: pointer;
+    margin: 10px;
+}
+
+.imagen img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
 }
 
 .rect {
     background-color: #666;
-    width: 225px;
-    height: 300px;
-    border-radius: 5px;
-    transition: 200ms;
 }
 
 .imagen:hover {
-    width: 250px;
-    height: 325px;
+    transform: scale(1.1);
 }
 
-.rect:hover {
-    width: 250px;
-    height: 325px;
+
+/*https://www.instagram.com/p/CWi1TH-gyUH/*/
+
+.content {
+    position: absolute;
+    width: 80%;
+    bottom: 0;
+    height: 90%;
+    padding: 0.4em 1.5em;
+    font-size: 14px;
+    background-color: #22222275;
+    color: #eee;
+    backdrop-filter: blur(10px);
+    border-radius: 5px;
+    transform: scale(0.0);
+    overflow: hidden;
+    transition: all .4s ease;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.144);
+}
+
+.content p {
+    font-size: 1.5em;
+}
+
+.imagen:hover .content {
+    transform: translate(0, -30px);
+    transform: scale(0.9);
+}
+
+button {
+    border: 0;
 }
