--- a/CSS/objeto.css
+++ b/CSS/objeto.css
@@ -19,8 +19,8 @@ img.img {
     padding-left: 25px;
 }
 
-textarea{
-    font-family:Roboto, sans-serif;
+textarea {
+    font-family: Roboto, sans-serif;
 }
 
 #objName {
@@ -48,16 +48,14 @@ textarea{
 }
 
 .opcion:hover {
-    width: 85px;
-    height: 85px;
+    transform: scale(1.1);
 }
 
 .flex {
     display: flex;
-    margin: 10px 0 50px 0;
 }
 
-button{    
+button {
     width: 50px;
     height: 50px;
     transform: rotate(-90deg);
@@ -72,11 +70,11 @@ button{
     cursor: pointer;
 }
 
-button .fav{
+button .fav {
     width: 45px;
     height: 45px;
     color: rgb(216, 24, 24);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bolder;
     font-size: x-large;
     align-items: center;
@@ -86,9 +84,15 @@ button .fav{
     transition: 200ms;
 }
 
-button:hover{
+button:hover {
     background-color: rgb(216, 24, 24);
 }
-button .fav:hover{
+
+button .fav:hover {
     color: #aaa
+}
+
+select {
+    width: 140px;
+    margin: 5px 0 20px 0;
 }
