--- a/CSS/header_footer/header_perfil.css
+++ b/CSS/header_footer/header_perfil.css
@@ -17,38 +17,42 @@
     cursor: pointer;
 }
 
-a, a:visited{
+a,
+a:visited {
     font-style: unset;
     color: #222;
 }
 
 
 /* Links de la parte del perfil*/
-ul.cabecera, .full{
+
+ul.cabecera,
+.full {
     height: 100%;
 }
 
-ul.cabecera{
+ul.cabecera {
     left: 25px;
     margin: 0;
     display: flex;
 }
 
-li{
-    padding:16px 25px 0 25px;
+li {
+    padding: 16px 25px 0 25px;
     list-style: none;
     transition: 200ms;
 }
 
-li a{
+li a {
     font-size: large;
     text-decoration: none;
     transition: 200ms;
 }
 
-li:hover, a:hover, li.choosen{
+li:hover,
+a:hover,
+li.choosen {
     background-color: #aaa;
     color: #000;
     border-radius: 10px;
 }
-
