--- a/CSS/catalogo.css
+++ b/CSS/catalogo.css
@@ -4,6 +4,7 @@ body {
     background-color: #f2f2f2;
     width: 100%;
     height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     overflow: visible;
 }
 
@@ -11,7 +12,9 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 25px 0;
+    margin: 1% 10%;
+    padding: 1%;
+    box-shadow: 2px 2px 5px #22222275;
 }
 
 .imagen {
@@ -68,6 +71,6 @@ body {
     transform: scale(0.9);
 }
 
-button {
-    border: 0;
+.cent {
+    text-align: center;
 }
