--- a/CSS/categorias.css
+++ b/CSS/categorias.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: 100%;
 }
 
@@ -18,9 +19,14 @@ li a {
     font-size: 45px;
 }
 
+li a:hover {
+    background-color: #22222225;
+}
+
 li {
     list-style-type: none;
     margin-top: 25px;
+    padding: 15px;
 }
 
 .flex {
