--- a/CSS/logIn_SignIn.css
+++ b/CSS/logIn_SignIn.css
@@ -1,20 +1,20 @@
 body {
-    background-color: #C4C4C4;
+    background-color: #62c4be;
+    /*background: linear-gradient(253deg, #fff 20%, #62c4be);*/
     width: 100%;
     height: 100%;
-    font-family: Roboto, sans-serif, Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .recuadro {
-    background-color: #BC9090;
-    box-shadow: 0 5px 5px #9c7b79;
+    display: flex;
     border-radius: 5px;
     position: absolute;
     width: 600px;
     height: 600px;
     top: 50%;
     left: 50%;
-    margin: -300px 0 0 -300px;
+    margin: -300px 0 0 -500px;
 }
 
 .recuadro-signin {
@@ -24,13 +24,16 @@ body {
     text-align: center;
 }
 
+.img-pos {
+    margin-top: 150px;
+    margin-right: 150px;
+}
+
 h3 {
     color: #FFF;
-    background: #a57d7c;
+    background: #222;
     padding: 20px;
     margin-top: 0px;
-    border-radius: 5px;
-    border-bottom: px solid #886c6a78;
     border-radius: 5px;
 }
 
@@ -39,10 +42,9 @@ h3 {
     margin-bottom: 10px;
 }
 
-::placeholder{
+::placeholder {
     color: #222
 }
-
 
 .h50 {
     height: 50%;
@@ -53,10 +55,10 @@ h3 {
 }
 
 #btnEnter {
-    background-color: #BC9090;
-    color: #FFF;
+    background-color: #fff;
+    color: #222;
     border-radius: 10px;
-    border: 1px solid #FFF;
+    border: 1px solid #222;
     padding: 5px;
     transition: 100ms;
     font-size: medium;
@@ -64,6 +66,6 @@ h3 {
 }
 
 #btnEnter:hover {
-    background-color: #FFF;
-    color: #555;
+    background-color: #555;
+    color: #eee;
 }
