--- a/CSS/perfil/perfil.css
+++ b/CSS/perfil/perfil.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background: #222;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .f-gris {
