Muchos cambios para el Entorno Responsivo
Este ha sido el primer commit real porque en ningún momento he sentido la necesidad de "guardar", ya que no siento que realmente se haya terminado algo en concreto.
Se cambia una cosa en x cabecera, en las otras no funciona, se modifican las otras y ya las primeras necesitan un cambio... Por ahora ha sido todo bastante caos. 

Por suerte, gran parte de la página ya tenía gran parte de diseño responsivo, pues gracias a varios cursos que he hecho pude tener la intuición de usar flex, porcentajes o grids, que facilitan esta parte. Aún así hay muchos cambios.

Sobre todo se han cambiado cosas sutiles como:
 - La página de Inicio de la página
 - Las categorías
 - Parte del inicio del perfil de usuario(que espero ayude a las otras 2 partes del perfil)
  - Las cabeceras tanto de la zona de perfil como las generales.

--- a/CSS/catalogo.css
+++ b/CSS/catalogo.css
@@ -74,3 +74,17 @@ body {
 .cent {
     text-align: center;
 }
+
+@media screen and (max-width:960px) {
+    .imagen {
+        width: 150px;
+        height: 200px;
+    }
+}
+
+@media screen and (min-width:300px) and (max-width:700px) {
+    .imagen {
+        width: 120px;
+        height: 160px;
+    }
+}
