--- a/CSS/header_footer/footer.css
+++ b/CSS/header_footer/footer.css
@@ -12,3 +12,21 @@ footer {
     text-align: center;
     font-size: small;
 }
+
+@media screen and (min-width:800px) and (max-width:1100px) {
+    footer {
+        position: fixed;
+    }
+}
+
+@media screen and (min-width:600px) and (max-width:800px) {
+    footer {
+        position: fixed;
+    }
+}
+
+@media screen and (max-width:599px) {
+    footer {
+        position: fixed;
+    }
+}
