--- a/CSS/header_footer/header.css
+++ b/CSS/header_footer/header.css
@@ -1,94 +1,135 @@
-/* background */
-
-.cab-fondo {
-    background-color: #b6b6b6;
-    width: 100%;
-    height: 50px;
-    text-align: center;
-    justify-self: center;
-}
-
-.cab-fondo::after {
-    content: "";
-    display: block;
-    clear: both;
-}
-
-.sep {
-    position: relative;
-    float: right;
-    right: 20px;
-    border: 1px solid #2222;
-    background-color: #2222;
-    height: 1px;
-    top: 3px;
-    height: 75%;
-}
-
-p {
-    font-size: 25px;
-    margin-top: 10px;
-}
-
-
-/* Nombre de la pagina */
-
-.nombre {
-    position: relative;
-    width: 200px;
-    height: 100%;
-    background-color: #D0D0D0;
-    float: left;
-}
-
-img.foto {
-    width: 40px;
-    height: 40px;
-}
-
-
-/* Parte del carrito */
-
-.c-nombre {
-    position: relative;
-    padding: 0;
-    margin: 7px 0 0 0px;
-    right: 5px;
-    float: right;
-    transition: 200ms;
-    cursor: pointer;
-}
-
-.foto-c {
-    position: relative;
-    margin-right: 40px;
-    margin-top: 3px;
-    float: right;
-    cursor: pointer;
-}
-
-
-/* Parte del Usuario */
-
-.userName {
-    position: relative;
-    padding: 0;
-    margin: 7px 0 0 0px;
-    right: 5px;
-    float: right;
-    cursor: pointer;
-}
-
-#foto-u {
-    position: relative;
-    margin-top: 3px;
-    margin-right: 20px;
-    float: right;
-    cursor: pointer;
-}
-
-a,
-a:visited {
-    font-style: unset;
-    color: #222;
-}
+    /* background */
+    
+    .cab-fondo {
+        background-color: #b6b6b6;
+        width: 100%;
+        height: 50px;
+        text-align: center;
+        justify-self: center;
+    }
+    
+    .cab-fondo::after,
+    .nombre::after,
+    .c-nombre::after,
+    .foto-c::after,
+    .userName::after,
+    #foto-u::after {
+        content: "";
+        display: block;
+        clear: both;
+    }
+    
+    .sep {
+        position: relative;
+        float: right;
+        right: 15px;
+        border: 1px solid #2222;
+        background-color: #2222;
+        height: 1px;
+        top: 3px;
+        height: 75%;
+    }
+    /* Nombre de la pagina */
+    
+    .nombre {
+        font-size: 25px;
+        position: relative;
+        width: 150px;
+        height: 100%;
+        background-color: #D0D0D0;
+        float: left;
+    }
+    
+    .nombre p {
+        margin: 0;
+        padding: 0;
+    }
+    
+    img.foto {
+        width: 38px;
+        height: 38px;
+    }
+    /* Parte del carrito */
+    
+    .c-nombre {
+        position: relative;
+        padding: 0;
+        margin: 7px 0 0 0px;
+        right: 5px;
+        float: right;
+        transition: 200ms;
+        cursor: pointer;
+    }
+    
+    .foto-c {
+        position: relative;
+        margin-right: 35px;
+        margin-top: 3px;
+        float: right;
+        cursor: pointer;
+    }
+    /* Parte del Usuario */
+    
+    .userName {
+        position: relative;
+        margin: 7px 0 0 0px;
+        font-size: 20px;
+        right: 5px;
+        float: right;
+        cursor: pointer;
+    }
+    
+    #foto-u {
+        position: relative;
+        margin-top: 3px;
+        margin-right: 20px;
+        float: right;
+        cursor: pointer;
+    }
+    
+    a,
+    a:visited {
+        font-style: unset;
+        color: #222;
+    }
+    
+    @media screen and (min-width:600px) and (max-width:800px) {
+        .cab-fondo {
+            height: 45px;
+        }
+        img.foto {
+            width: 30px;
+            height: 30px;
+        }
+        .userName {
+            font-size: 25px;
+        }
+        .nombre {
+            width: 150px;
+        }
+        .nombre p {
+            margin: 0;
+            padding-top: 5px;
+        }
+    }
+    
+    @media screen and (max-width:600px) {
+        .cab-fondo {
+            height: 40px;
+        }
+        img.foto {
+            width: 25px;
+            height: 25px;
+            margin: 6px 15px;
+        }
+        .userName {
+            font-size: 15px;
+            width: 150px;
+        }
+        .nombre {
+            width: 150px;
+        }
+        .sep {
+            right: 0px;
+        }
+    }
