--- a/CSS/perfil/venta.css
+++ b/CSS/perfil/venta.css
@@ -1,85 +1,157 @@
 /* Parte de Venta */
-.v-pad{
+
+.f-gris {
+    display: block;
+    height: fit-content;
+    width: 80%;
+    left: 10%;
+    margin: 10px;
+}
+
+.v-pad {
     border-radius: 10px;
     padding: 25px 40px 0 40px;
 }
 
-.l-mar{
+.l-mar {
     margin-left: 100px;
 }
 
-label{
+label {
     font-size: large;
 }
 
 
 /* Mapa */
-.mapa{
-    background-color: grey; 
-    width: 100%; 
+
+.mapa {
+    background-color: grey;
+    width: 100%;
     height: 100%;
     min-width: 300px;
     min-height: 200px;
 }
 
-textarea{
+textarea {
     width: 100%;
     height: 100%;
 }
 
-.full{
+.full {
     width: 100%;
     margin-top: 20px;
 }
 
-.full::after{
+.der {
+    left: calc(100%-300px);
+}
+
+.over {
+    overflow-x: auto;
+    max-width: 100%;
+}
+
+.image {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+}
+
+.izq::after,
+.der::after {
     content: "";
     display: block;
     clear: both;
 }
 
-.der{
-    left: calc(100%-300px);
-}
-
-.over{
-    overflow-x: scroll;
-    max-width: 450px;
-}
-
-.image{
-    width: 100px;
-    height: 100px;
-    margin:10px;
-}
 
 /* Lista de ciudades */
 
-.h50{
+.h250 {
     height: 250px;
 }
 
-
-#listaUbis{
-    margin-left: 20px;
+#listaUbis {
     background-color: #555;
     border-radius: 5px;
     overflow-y: scroll;
     height: 100%;
-    width: 750px;
+    width: 75%;
 }
 
-.ubi{
+.ubi {
     color: #eee;
 }
 
-.ubi:hover{
+.ubi:hover {
     color: #eee;
     background-color: #555;
     text-align: center;
 }
 
-label[for="ubisTotal"]{
+.w-100 {
+    width: 100%;
+}
+
+label[for="ubisTotal"] {
     margin-top: 25px;
     color: #eee;
+}
+
+input[type="submit"] {
+    margin: 2% 0;
+}
+
+.m-top {
+    margin-top: 2%;
+    border: #555 solid 1px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.grid {
+    display: grid;
+    justify-items: center;
+}
+
+@media screen and (max-width:1400px) {
+    .f-gris {
+        width: 80%;
+        left: 10%;
+    }
+    #listaUbis {
+        width: 70%;
+        justify-items: center;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    .full {
+        height: 30%;
+        margin-bottom: 20px;
+    }
+    .ubicacion {
+        margin-bottom: 20px;
+    }
+    .f-gris {
+        margin: 20px 0;
+        width: 90%;
+        left: 2%;
+        padding: 20px;
+    }
+    #listaUbis {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:800px) {
+    .f-gris {
+        margin: 20px 0;
+        width: 90%;
+        left: 1%;
+        padding: 20px;
+    }
+    #listaUbis {
+        width: 100%;
+    }
 }
