Add JQuery a Header/Footer y pequeños cambios
Se ha añadido JQuery a todos los ficheros para una "menor" repetición de código en headers y footers. 

También se han hecho pequeños cambios que encontramos mal en la zona de los objetos al hacer hover.

--- a/CSS/header_footer/header.css
+++ b/CSS/header_footer/header.css
@@ -7,6 +7,10 @@
         text-align: center;
         justify-self: center;
     }
+
+    .cabecera{
+        margin: 0;
+    }
     
     .cab-fondo::after,
     .nombre::after,
