--- a/CSS/catalogo.css
+++ b/CSS/catalogo.css
@@ -22,13 +22,14 @@ body {
     width: 225px;
     height: 300px;
     margin: 25px 10px 0 0;
-    transition: 200ms;
+    transition: 0.4s all;
     cursor: pointer;
     margin: 10px;
+    text-align: center;
 }
 
 .imagen img {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
     border-radius: 5px;
@@ -39,7 +40,7 @@ body {
 }
 
 .imagen:hover {
-    transform: scale(1.1);
+    transform: scale(1.12);
 }
 
 
@@ -47,27 +48,23 @@ body {
 
 .content {
     position: absolute;
+    left: 3%;
     width: 80%;
     bottom: 0;
     height: 90%;
-    padding: 0.4em 1.5em;
+    padding: 5px 15px;
     font-size: 14px;
     background-color: #22222275;
     color: #eee;
     backdrop-filter: blur(10px);
     border-radius: 5px;
-    transform: scale(0.0);
+    transform: scale(0);
     overflow: hidden;
-    transition: all .4s ease;
+    transition: all .4s;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.144);
 }
 
-.content p {
-    font-size: 1.5em;
-}
-
 .imagen:hover .content {
-    transform: translate(0, -30px);
     transform: scale(0.9);
 }
 
@@ -75,11 +72,30 @@ body {
     text-align: center;
 }
 
+#precio{
+    margin: 0;
+    padding: 0;
+}
+div.content p#precio,
+div.content p#desc{
+   font-size: 18px;
+}
+
 @media screen and (max-width:960px) {
     .imagen {
         width: 150px;
         height: 200px;
     }
+
+    .content{
+        left: 0;
+    }
+
+    div.content p#precio,
+    div.content p#desc{
+    font-size: 13px;
+    }
+
 }
 
 @media screen and (min-width:300px) and (max-width:700px) {
@@ -87,4 +103,15 @@ body {
         width: 120px;
         height: 160px;
     }
+
+    .content{
+        width: 60%;
+        left: 8%;
+    }
+    
+    div.content p#precio,
+    div.content p#desc{
+    font-size: 9px;
+    }
+
 }
