--- a/CSS/cesta/cesta.css
+++ b/CSS/cesta/cesta.css
@@ -1,116 +1,118 @@
-        h1 {
-            text-align: center;
-        }
-        /*Cada cuadro*/
-        
-        .cuadro {
-            background: #ccc;
-            position: relative;
-            padding: 10px;
-            font-size: 25px;
-            text-align: center;
-            margin: 10px;
-            border-radius: 10px;
-            border: 2px solid #222;
-            width: 200px;
-            height: 250px;
-            top: 50px;
-            transition: 500ms;
-        }
-        
-        .txt {
-            text-decoration: double;
-            color: #222;
-        }
-        
-        .cuadro:hover {
-            background-color: #a9a9a9;
-        }
-        /*Situación de cada cuadro por separado*/
-        
-        .full {
-            width: 100%;
-            margin-bottom: 100px;
-        }
-        
-        .flex {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-        }
-        /*==================== Parte del carrito ====================*/
-        
-        .carrito {
-            background-color: #a9a9a9;
-            height: 100%;
-            overflow-x: auto;
-        }
-        
-        .producto {
-            list-style: none;
-            background-color: #bbb;
-            width: 150px;
-            margin: 5px;
-            height: 90%;
-        }
-        
-        #articulos {
-            margin: 0;
-            padding: 0;
-            width: auto;
-            display: inline-flex;
-            height: 225px;
-        }
-        
-        #articulos::after {
-            content: "";
-            display: block;
-            clear: both;
-        }
-        
-        input[type="submit"] {
-            border-radius: 5px;
-            font-size: large;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #eee;
-            border: 1px solid #555;
-            color: #555;
-        }
-        
-        input[type="submit"]:hover {
-            background-color: #555;
-            color: #eee;
-        }
-        
-        .cent {
-            margin-top: 10px;
-            text-align: center;
-        }
-        
-        .costo {
-            background-color: #555;
-            padding: 10px;
-            color: #eee;
-            font-size: larger;
-            font-weight: bold;
-            width: 100%;
-            height: 5%;
-            text-align: center;
-        }
-        
-        @media screen and (max-width:50em) {
-            .cuadro {
-                width: 150px;
-                height: 100px;
-                font-size: 20px;
-            }
-        }
-        
-        @media screen and (min-width: 50em) {
-            .cuadro {
-                width: 300px;
-                height: 100px;
-            }
-        }
+h1 {
+    text-align: center;
+}
+/*Cada cuadro*/
+
+.cuadro {
+    background: #ccc;
+    position: relative;
+    padding: 10px;
+    font-size: 25px;
+    text-align: center;
+    margin: 10px;
+    border-radius: 10px;
+    border: 2px solid #222;
+    width: 200px;
+    height: 250px;
+    top: 50px;
+    transition: 500ms;
+    box-shadow: 5px 5px 5px #00000025;
+}
+
+.txt {
+    text-decoration: double;
+    color: #222;
+}
+
+.cuadro:hover {
+    background-color: #a9a9a9;
+}
+/*Situación de cada cuadro por separado*/
+
+.full {
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+/*==================== Parte del carrito ====================*/
+
+.carrito {
+    background-color: #a9a9a9;
+    height: 100%;
+    overflow-x: auto;
+}
+
+.producto {
+    list-style: none;
+    background-color: #bbb;
+    width: 150px;
+    margin: 5px;
+    height: 90%;
+    box-shadow: 5px 5px 5px #00000025;
+}
+
+#articulos {
+    margin: 0;
+    padding: 0;
+    width: auto;
+    display: inline-flex;
+    height: 225px;
+}
+
+#articulos::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+input[type="submit"] {
+    border-radius: 5px;
+    font-size: large;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #eee;
+    border: 1px solid #555;
+    color: #555;
+}
+
+input[type="submit"]:hover {
+    background-color: #555;
+    color: #eee;
+}
+
+.cent {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.costo {
+    background-color: #555;
+    padding: 10px;
+    color: #eee;
+    font-size: larger;
+    font-weight: bold;
+    width: 100%;
+    height: 5%;
+    text-align: center;
+}
+
+@media screen and (max-width:50em) {
+    .cuadro {
+        width: 150px;
+        height: 100px;
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 50em) {
+    .cuadro {
+        width: 300px;
+        height: 100px;
+    }
+}
