Introducción al acceso de los productos mediante JQuery
Se ha utilizado JQuery y una función de JS para administrar productos a la Página de Catálogo de Compras.

--- a/CSS/catalogo.css
+++ b/CSS/catalogo.css
@@ -81,6 +81,10 @@ div.content p#desc{
    font-size: 18px;
 }
 
+h2{
+    font-size: 15px
+}
+
 @media screen and (max-width:960px) {
     .imagen {
         width: 150px;
