--- a/CSS/cesta/cesta.css
+++ b/CSS/cesta/cesta.css
@@ -1,6 +1,8 @@
 h1 {
     text-align: center;
 }
+
+
 /*Cada cuadro*/
 
 .cuadro {
@@ -27,6 +29,8 @@ h1 {
 .cuadro:hover {
     background-color: #a9a9a9;
 }
+
+
 /*Situación de cada cuadro por separado*/
 
 .full {
@@ -41,12 +45,15 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+
+
 /*==================== Parte del carrito ====================*/
 
 .carrito {
     background-color: #a9a9a9;
-    height: 100%;
+    height: 50%;
     overflow-x: auto;
+    box-shadow: 0px 15px 5px #444;
 }
 
 .producto {
@@ -100,6 +107,7 @@ input[type="submit"]:hover {
     width: 100%;
     height: 5%;
     text-align: center;
+    margin-top: 30px;
 }
 
 @media screen and (max-width:50em) {
