--- a/CSS/chat.css
+++ b/CSS/chat.css
@@ -21,7 +21,7 @@ body {
     position: relative;
     height: calc(100% - 100px);
     background-color: #888;
-    margin: 10px 50px;
+    margin: 10px 30px;
     border-radius: 10px;
     margin-right: 5%;
     padding-top: 20px;
@@ -63,11 +63,19 @@ body {
     background-color: #999;
 }
 
-#nombre #nombre,
-#ultimoMensaje #ultimoMensaje {
+p#nombre,
+p#ultimoMensaje {
     font-size: large;
     padding: 0;
     margin: 0;
+    max-width: 290px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+p#nombre {
+    font-weight: bold;
 }
 
 #ultimoMensaje #ultimoMensaje {
@@ -162,4 +170,56 @@ body {
 
 .cent {
     text-align: center;
+}
+
+@media screen and (max-width:1600px) {
+    p#ultimoMensaje {
+        max-width: 250px;
+    }
+}
+
+@media screen and (max-width:1400px) {
+    p#ultimoMensaje {
+        max-width: 200px;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    .cont-izq {
+        padding: 5px;
+    }
+    p#nombre {
+        font-weight: bold;
+    }
+    p#ultimoMensaje {
+        max-width: 150px;
+    }
+    .c-fondo {
+        justify-content: center;
+    }
+    .c-fondo div p#nombre {
+        padding: 0 1px;
+        margin: 0;
+        justify-content: center;
+        align-items: flex-start;
+    }
+}
+
+@media screen and (max-width:750px) {
+    .cont-izq {
+        padding: 5px;
+        width: 40%;
+    }
+    p#nombre {
+        font-size: medium;
+    }
+    #ultimoMensaje {
+        display: none;
+    }
+    .c-fondo div p#nombre {
+        padding: 0 1px;
+        margin: 0;
+        justify-content: center;
+        align-items: flex-start;
+    }
 }
