--- a/CSS/logIn_SignIn.css
+++ b/CSS/logIn_SignIn.css
@@ -1,20 +1,22 @@
 body {
     background-color: #62c4be;
-    /*background: linear-gradient(253deg, #fff 20%, #62c4be);*/
     width: 100%;
     height: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .recuadro {
-    display: flex;
-    border-radius: 5px;
+    display: grid;
     position: absolute;
-    width: 600px;
-    height: 600px;
-    top: 50%;
-    left: 50%;
-    margin: -300px 0 0 -500px;
+    top: 15%;
+    left: 15%;
+    height: auto;
+    width: 50%;
+    background-color: #eee;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    transition: all .4s;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 }
 
 .recuadro-signin {
@@ -22,11 +24,18 @@ body {
     position: relative;
     float: left;
     text-align: center;
+    transition: all 0.4s;
+}
+
+.recuadro-signin::after {
+    content: "";
+    display: block;
+    clear: both;
 }
 
 .img-pos {
-    margin-top: 150px;
-    margin-right: 150px;
+    margin-top: 10%;
+    margin-right: 0;
 }
 
 h3 {
@@ -68,4 +77,30 @@ h3 {
 #btnEnter:hover {
     background-color: #555;
     color: #eee;
+}
+
+@media screen and (max-width:1400px) {
+    .recuadro {
+        margin-top: 0;
+        left: 5%;
+    }
+}
+
+@media screen and (min-width:500px) and (max-width: 1000px) {
+    body {
+        overflow: hidden;
+    }
+    .recuadro {
+        position: relative;
+        margin-top: 3%;
+        width: 80%;
+        left: 10%;
+    }
+    .der {
+        float: unset;
+    }
+    .img-pos {
+        margin-top: 0;
+        margin-right: 0;
+    }
 }
